# Masterclass

./: .gitignore
moda/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  send_test_mail.py
moda/.github/workflows/: ci.yml
moda/config/: indicators.yaml  logging.yaml  scoring.yaml
moda/rules/: external_sources.yml
moda/rules/community/: README.md
moda/rules/official/: maldoc_macros.yar  maldoc_ole.yar  maldoc_ooxml.yar  maldoc_pdf.yar  maldoc_rtf.yar
moda/src/moda/: __init__.py  chatbot.py  cli.py
moda/src/moda/analyzers/: __init__.py  embedded.py  file_type.py  hash_generator.py  macro.py  metadata.py  office_xml.py  ole.py  ooxml.py  pdf.py  relationship.py  rtf.py
moda/src/moda/core/: __init__.py  base.py  context.py  engine.py  enums.py  exceptions.py  file_support.py  interfaces.py  limits.py  models.py
moda/src/moda/gateway/: __init__.py  analyzer.py  app.py  config.py  errors.py  logging.py  mime.py  models.py  processor.py  quarantine.py  relay.py  smtp.py  web.py
moda/src/moda/intelligence/: __init__.py  ioc_extractor.py  yara_scanner.py
moda/src/moda/reporting/: __init__.py  base.py  console.py  html_report.py  json_report.py  pdf_report.py  view_model.py
moda/src/moda/scoring/: __init__.py  risk_scorer.py
moda/src/moda/ui/: __init__.py  server.py
moda/src/moda/ui/static/: app.js  index.html  styles.css
moda/src/moda/utils/: __init__.py  archive_utils.py  config_loader.py  file_utils.py  regex_patterns.py  string_utils.py
moda/tests/: test_batch_cli.py  test_chatbot.py  test_engine.py  test_gateway_components.py  test_gateway_web.py  test_mail_gateway.py  test_reporting.py  test_security_regressions.py  test_send_test_mail.py  test_static_analyzers.py  test_ui_server.py  test_yara_rules.py
