[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moda"
version = "0.1.0"
description = "Malicious Office Document Analyzer - A Python static analysis tool for Office documents and PDFs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "MODA Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-magic>=0.4.27",
    "olefile>=0.47",
    "oletools>=0.60",
    "yara-python>=4.3.0",
    "pypdf>=3.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
moda = "moda.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"moda.ui" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.setuptools.data-files]
"share/moda/config" = ["config/*.yaml"]
"share/moda/rules/official" = ["rules/official/*.yar", "rules/official/*.yara"]
"share/moda/rules/community" = ["rules/community/*.yar", "rules/community/*.yara", "rules/community/*.md"]
"share/moda/rules/external" = ["rules/external/*.yar", "rules/external/*.yara", "rules/external/*.md"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "B027",   # setup/teardown are intentional optional lifecycle hooks
    "C401",   # readability is preferred for a few sorted comprehensions
    "E501",   # long report prose and signatures are formatted as data
    "S110",   # best-effort optional parser cleanup
    "S112",   # best-effort extraction continues per corrupt member
    "S314",   # XML input is byte-bounded and stdlib ET does not resolve external entities
    "SIM102",
    "SIM103",
    "SIM105",
    "SIM114",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
